# bmp-compression

./: CMakeLists.txt  README.md  build.sh
source/app/: CMakeLists.txt  filelistmodel.cpp  filelistmodel.h  main.qml  proxymodel.cpp  test.cpp  test.h  worker.cpp
source/core/: barch.h  bmp.cpp  core.cpp  core.h  utils.cpp
sources/app/: error_dialog.qml  filelistmodel.cpp  filelistmodel.h  main.cpp  proxymodel.cpp  proxymodel.h  worker.cpp  worker.h
sources/core/: CMakeLists.txt  barch.cpp  barch.h  bmp.cpp  bmp.h  core.cpp  core.h  image.h  utils.cpp  utils.h
